# kotoclip

./: .gitignore  Cargo.toml  README.md  index.html  kotoclip_v1_independent_design.md  package-lock.json  package.json  sources.md  vite.config.ts
crates/kotoclip-core/: Cargo.toml
crates/kotoclip-core/resources/: bunsetsu_patterns.json  expression_patterns.json  lexical_candidate_patterns.json  llm_dictionary_decision.schema.json  word_formation_patterns.json
crates/kotoclip-core/resources/grammar/compiled/: grammar_catalog.json  grammar_explanations.json  grammar_search_index.json  manifest.json
crates/kotoclip-core/resources/grammar/schema/: grammar_source.schema.json
crates/kotoclip-core/resources/grammar/source/: catalog_metadata.json
crates/kotoclip-core/resources/grammar/source/concepts/: core.json
crates/kotoclip-core/src/: analysis_progress.rs  cache.rs  document.rs  ffi.rs  lib.rs  library.rs  models.rs  performance.rs  text_language.rs  transport.rs
crates/kotoclip-core/src/dictionary/: aggregate.rs  bubble_html.rs  bundle.rs  html.rs  lookup.rs  lookup_state.rs  mod.rs  presentation.rs
crates/kotoclip-core/src/dictionary/adapters/: common.rs  crown.rs  daijirin.rs  mod.rs  shogakukan.rs
crates/kotoclip-core/src/export/: json.rs
crates/kotoclip-core/src/import/: epub.rs
crates/kotoclip-core/src/llm/: client.rs  dictionary.rs  mod.rs  transport.rs
crates/kotoclip-core/src/pipeline/: bunsetsu.rs  candidates.rs  expressions.rs  grammar.rs  lexical.rs  mod.rs  morpheme.rs  restore.rs  ruby.rs  word_formation.rs
crates/kotoclip-core/src/pipeline/grammar/: catalog.rs  mod.rs  resolve.rs
crates/kotoclip-core/src/pipeline/morphology/: mod.rs
crates/kotoclip-core/src/profile/: dictionary.rs  exposure.rs  expressions.rs  kanji.rs  mod.rs  scoring.rs  segmentation.rs
crates/kotoclip-core/tests/fixtures/: grammar_representative_cases.json  representative_cases.json
src-tauri/: Cargo.toml  tauri.conf.json  tauri.float-debug.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  paths.rs  state.rs
(+183 files in other folders)
