[workspace]
members = [
    "crates/kotoclip-core",
    "src-tauri",
]
resolver = "2"

# 开发渠道只保留实时调试所需的增量编译，不生成完整 debug 符号。
[profile.dev]
debug = 0
incremental = true

# Insider 只生成发布产物，不保留 release 增量缓存。
[profile.release]
debug = 0
incremental = false

# 开启所有开发渠道下第三方包的编译器优化，降低 debug 模式下 Vibrato 与 SQLite 的初始化开销。
[profile.dev.package."*"]
opt-level = 3

