[package]
name = "kotoclip-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
vibrato = { path = "../../vendor/vibrato", version = "0.5.2" }
aho-corasick = "1.1"
rusqlite = { version = "0.31", features = ["bundled", "bundled-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.3"
unicode-segmentation = "1.11"
unicode-normalization = "0.1"
log = "0.4"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ammonia = "4"
html5ever = "0.39"
regex = "1"
flate2 = "1"
roxmltree = "0.21"
zip = { version = "4", default-features = false, features = ["deflate"] }
